Added parse server compatibility

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ www/js/release.js
 platforms/android/assets/www/js/release.js
 platforms/ios/www/js/release.js
 platforms/browser/www/js/release.js
+realeseScript
