--- a/.gitignore
+++ b/.gitignore
@@ -6,4 +6,8 @@ www/js/release.js
 platforms/android/assets/www/js/release.js
 platforms/ios/www/js/release.js
 platforms/browser/www/js/release.js
+www/js/assets/assets.js
+platforms/android/assets/www/js/assets/assets.js
+platforms/ios/www/js/assets/assets.js
+platforms/browser/www/js/assets/assets.js
 realeseScript
